# ocaml-hedgehog

./: LICENSE  README.md  dune-project  hedgehog-alcotest.opam  hedgehog.opam
.github/workflows/: ci.yml
alcotest/: dune  hedgehog_alcotest.ml  hedgehog_alcotest.mli
lib/: diff.ml  diff.mli  dune  gen.ml  gen.mli  hedgehog.ml  property.ml  property.mli  range.ml  range.mli  seed.ml  seed.mli  shrink.ml  shrink.mli  stm.ml  stm.mli  tree.ml  tree.mli
test/: dune  test_hedgehog.ml
